--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <section class="contact-section" id="contact">
   <p class="intro">Get in Touch</p>
-  <h1 class="title">Contact Me</h1>
+  <p class="title">Contact Me</p>
   <div class="contact-info">
     <div
       class="contact-item"
