--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="text-container">
     <p class="intro">Hello, I'm</p>
-    <h1 class="name">{{ intro.username }}</h1>
+    <p class="name">{{ intro.username }}</p>
     <p class="role">{{ intro.role }}</p>
     <!-- <div class="btn-container m-3">
       <button
