--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -3,8 +3,8 @@ $intro-txt-color: #777;
 $title-txt-color: #333;
 $intro-font-size: 1.5rem;
 $title-font-size: 3rem;
-$intro-m-t: 1rem;
-$title-m-t: 2rem;
+$intro-m-b: 2rem;
+$title-m-b: 3rem;
 $title-font-weight: 600;
 $border: 1px solid #ddd;
 
