--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,15 +1,15 @@
 <section class="about-section" id="about">
   <p class="intro">Get To Know More</p>
-  <h1 class="title">About Me</h1>
+  <p class="title">About Me</p>
   <div class="details-container">
     <div class="detail-box">
       <i class="fas fa-briefcase icon"></i>
-      <h3>Experience</h3>
+      <p>Experience</p>
       <p>1+ years<br />Frontend Development</p>
     </div>
     <div class="detail-box">
       <i class="fas fa-graduation-cap icon"></i>
-      <h3>Education</h3>
+      <p>Education</p>
       <p>{{ about.education.degree }}</p>
     </div>
   </div>
