--- a/src/app/overview-dialog/overview-dialog.component.html
+++ b/src/app/overview-dialog/overview-dialog.component.html
@@ -2,7 +2,7 @@
   {{ modalData.title }}
 </h1>
 
-<div mat-dialog-content class="custom-dialog-content">
+<div mat-dialog-content class="mat-dialog-container">
   <div class="modal-body-content">
     <div class="modal-details">
       <div class="modal-image">
