--- a/src/app/overview-dialog/overview-dialog.component.scss
+++ b/src/app/overview-dialog/overview-dialog.component.scss
@@ -3,62 +3,59 @@ $primary-color: #007bff;
 $secondary-color: #6c757d;
 $danger-color: #dc3545;
 
-.custom-dialog-content {
+.mat-dialog-container {
   padding: 24px;
-  border-radius: 8px;
-}
 
-.modal-body-content {
-  display: flex;
-  align-items: flex-start;
+  .modal-body-content {
+    display: flex;
+    align-items: flex-start;
 
-  .modal-image {
-    flex: 1;
-    margin-right: 20px;
+    .modal-image {
+      flex: 1;
+      margin-right: 20px;
 
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-  }
-
-  .modal-details {
-    flex: 2;
-
-    p {
-      font-size: 16px;
-      line-height: 1.6;
-      margin-bottom: 20px;
+      img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 10px;
+      }
     }
 
-    .modal-buttons {
-      display: flex;
-      gap: 15px;
+    .modal-details {
+      flex: 2;
 
-      button {
-        font-size: 14px;
-        padding: 8px 16px;
-        text-transform: uppercase;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-
-        i {
-          font-size: 16px;
-        }
+      p {
+        font-size: 16px;
+        line-height: 1.6;
+        margin-bottom: 20px;
       }
 
-     
+      .modal-buttons {
+        display: flex;
+        gap: 15px;
+
+        button {
+          font-size: 14px;
+          padding: 8px 16px;
+          text-transform: uppercase;
+          display: flex;
+          align-items: center;
+          gap: 8px;
+
+          i {
+            font-size: 16px;
+          }
+        }
+      }
     }
   }
-}
 
-.mat-dialog-actions {
-  padding: 20px;
+  .mat-dialog-actions {
+    padding: 20px;
 
-  .btn-danger {
-    background-color: $danger-color;
-    color: #fff; // Text color
+    .btn-danger {
+      background-color: $danger-color;
+      color: #fff; // Text color
+    }
   }
 }
