--- a/src/app/overview-dialog/overview-dialog.component.html
+++ b/src/app/overview-dialog/overview-dialog.component.html
@@ -1,6 +1,6 @@
-<h1 mat-dialog-title class="modal-title border-bottom">
+<p mat-dialog-title class="title border-bottom">
   {{ modalData.title }}
-</h1>
+</p>
 
 <div mat-dialog-content class="mat-dialog-container">
   <div class="modal-body-content">
