font size changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
 
 <app-experience [experiences]="userInfo.experience" />
 
+<app-skills [skills]="userInfo.skills" />
+
 <app-card
   [cardId]="'certifications'"
   [cardTitle]="'Certifications'"
