--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <section class="contact-section" id="contact">
   <p class="intro">Get in Touch</p>
   <p class="title">Contact Me</p>
-  <div class="contact-info">
+  <div class="contact-info smooth-hover">
     <div
       class="contact-item"
       *ngFor="let contact of contacts"
