font size changes

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,6 +1,6 @@
 <section class="skill-section" id="skills">
   <p class="intro">Explore My</p>
-  <p class="title">Technical Skills</p>
+  <p class="title">Skills</p>
   <div class="skill-info">
     @for (item of skills; track $index) {
     <div class="skill-category">
