--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,12 +4,12 @@
   <div class="details-container">
     <div class="detail-box">
       <i class="fas fa-briefcase icon"></i>
-      <p>Experience</p>
+      <p class="secondary-txt">Experience</p>
       <p>1+ years<br />Frontend Development</p>
     </div>
     <div class="detail-box">
       <i class="fas fa-graduation-cap icon"></i>
-      <p>Education</p>
+      <p class="secondary-txt">Education</p>
       <p>{{ about.education.degree }}</p>
     </div>
   </div>
