--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -29,6 +29,10 @@
       box-shadow: $box-shadow;
     }
 
+    .secondary-txt {
+      color: black;
+    }
+
     .icon {
       font-size: 2rem; // Icon size
       margin-bottom: 1rem;
