--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,1 @@
-<app-nav-bar [username]="userInfo.username" />
-
-<app-intro [intro]="userInfo" />
-
-<app-about [about]="userInfo" />
-
-<app-experience [experiences]="userInfo.experience" />
-
-<app-skills [skills]="userInfo.skills" />
-
-<app-card
-  [cardId]="'certifications'"
-  [cardTitle]="'Certifications'"
-  [items]="userInfo.certifications"
-/>
-
-<app-card
-  [cardId]="'projects'"
-  [cardTitle]="'Projects'"
-  [items]="userInfo.projects"
-/>
-
-<app-contact [contacts]="userInfo.contact" />
+<router-outlet></router-outlet>
