--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,37 @@ a,
 .btn {
   transition: all 300ms ease;
 }
+
+/* SECTIONS */
+section {
+  padding: 4vh 10rem;
+  height: fit-content;
+  min-height: 96vh;
+  margin: 0 auto;
+  text-align: center; /* Center align section content */
+}
+
+/* Responsive adjustments */
+@media (max-width: 1200px) {
+  section {
+    padding: 4vh 8rem;
+  }
+}
+
+@media (max-width: 992px) {
+  section {
+    padding: 4vh 6rem;
+  }
+}
+
+@media (max-width: 768px) {
+  section {
+    padding: 4vh 4rem;
+  }
+}
+
+@media (max-width: 576px) {
+  section {
+    padding: 4vh 2rem;
+  }
+}
