--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -72,7 +72,8 @@
     }
 
     .container-title {
-      font-size: 1rem; // Title size
+      font-size: 1rem; 
+      color: $title-txt-color;
     }
   }
 }
