--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -3,7 +3,7 @@
     <img [src]="intro.profile" alt="Profile Picture" class="img-thumbnail" />
   </div>
   <div class="text-container">
-    <p class="intro">Hello, I'm</p>
+    <!-- <p class="intro">Hello, I'm</p> -->
     <h1 class="name">{{ intro.username }}</h1>
     <p class="role">{{ intro.role }}</p>
     <!-- <div class="btn-container m-3">
