--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,4 @@
 <nav class="desktop-nav">
-  <div class="logo">{{ username }}</div>
   <div>
     <ul class="nav-links">
       @for (item of navItems; track $index) {
@@ -12,7 +11,6 @@
 </nav>
 
 <nav class="hamburger-nav">
-  <div class="logo">{{ username }}</div>
   <div class="hamburger-menu">
     <div class="hamburger-icon" (click)="toggleMenu()">
       <span></span>
@@ -21,7 +19,8 @@
     </div>
     <div class="menu-links">
       <ul>
-        @for (item of navItems; track $index) { @if (item.display) {
+        @for (item of navItems; track $index) {
+        @if (item.display) {
         <li>
           <a
             [href]="'#' + item.id"
