about changed to education

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,16 +1,13 @@
-<section class="about-section" id="about">
-  <p class="intro">Get To Know More</p>
-  <p class="title">About Me</p>
+<section class="education-section" id="education">
+  <p class="intro">Explore My</p>
+  <p class="title">Education</p>
   <div class="details-container">
     <div class="detail-box">
-      <i class="fas fa-briefcase icon"></i>
-      <p class="secondary-txt">Experience</p>
-      <p>1+ years<br />Frontend Development</p>
-    </div>
-    <div class="detail-box">
       <i class="fas fa-graduation-cap icon"></i>
-      <p class="secondary-txt">Education</p>
       <p>{{ about.education.degree }}</p>
+      <p>{{ about.education.stream }}</p>
+      <p>{{ about.education.college }}</p>
+      <p>{{about.education.period}}</p>
     </div>
   </div>
 </section>
