--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -6,6 +6,7 @@
     <!-- <p class="intro">Hello, I'm</p> -->
     <p class="username">{{ intro.username }}</p>
     <p class="role">{{ intro.role }}</p>
+    <div class="location"><i class="fa-solid fa-location-arrow"></i> Chennai, Tamilnadu</div>
     <!-- <div class="btn-container m-3">
       <button
         class="btn btn-secondary"
