--- a/src/app/overview-dialog/overview-dialog.component.html
+++ b/src/app/overview-dialog/overview-dialog.component.html
@@ -37,6 +37,7 @@
   </div>
 </div>
 
-<div mat-dialog-actions class="d-flex justify-content-end">
+<div mat-dialog-actions class="mat-dialog-actions">
+  <!-- <button mat-button class="btn btn-secondary" (click)="onDownload()"><i class="fa-solid fa-circle-arrow-down"></i></button> -->
   <button mat-button class="btn btn-danger" (click)="onClose()">Close</button>
 </div>
