--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -28,13 +28,19 @@
     align-items: center; // Center align the text
 
     .username {
-      font-size: 2rem;
+      font-size: 2.2rem;
       color: #333;
-      font-weight: 500;
+      font-weight: 600;
     }
 
     .role {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
+      color: #777;
+      font-weight: 600;
+    }
+
+    .location {
+      font-size: 0.9rem;
       color: #777;
       font-weight: 600;
     }
@@ -46,8 +52,8 @@
     gap: 1rem;
 
     .btn {
+      padding: 10px;
       font-weight: 600;
-      padding: 1rem;
       border-radius: 2rem;
       max-width: 200px; // Limit button width
       width: 100%; // Full width for smaller screens
