css code cleanup

--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -3,10 +3,9 @@
     <img [src]="intro.profile" alt="Profile Picture" class="img-thumbnail" />
   </div>
   <div class="text-container">
-    <!-- <p class="intro">Hello, I'm</p> -->
     <p class="username">{{ intro.username }}</p>
     <p class="role">{{ intro.role }}</p>
-    <div class="location"><i class="fa-solid fa-location-arrow"></i> Chennai, Tamilnadu</div>
+    <div class="location"><i class="fa-solid fa-location-arrow"></i> <span> {{intro.currentLocation}}</span></div>
     <!-- <div class="btn-container m-3">
       <button
         class="btn btn-secondary"
