--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -6,6 +6,8 @@
   flex-direction: column;
   align-items: center;
   .card {
+    background: $primary-bg-color;
+    color: $primary-text-color;
     width: 100%;
     max-width: 600px;
     margin-bottom: 1rem;
@@ -14,6 +16,7 @@
     overflow: hidden;
     transition: $transition;
     box-shadow: $box-shadow;
+    border: $border;
     &:hover {
       transform: $transition-hover;
       box-shadow: $box-shadow;
@@ -52,10 +55,6 @@
       padding: 0.5rem 1.5rem;
       font-size: 1rem;
       transition: background-color 0.3s;
-
-      &:hover {
-        // background-color: darken($primary-color, 10%);
-      }
     }
 }
 
