--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -29,19 +29,19 @@
 
     .username {
       font-size: 2.2rem;
-      color: #333;
+      color: $primary-text-color;
       font-weight: 600;
     }
 
     .role {
       font-size: 1.2rem;
-      color: #777;
+      color: $secondary-text-color;
       font-weight: 600;
     }
 
     .location {
       font-size: 0.9rem;
-      color: #777;
+      color: $secondary-text-color;
       font-weight: 600;
     }
   }
@@ -67,6 +67,7 @@
     gap: 1rem;
 
     .icon {
+      color: $primary-text-color;
       cursor: pointer;
       height: 2rem;
       font-size: 1.5rem; // Increased icon size for better visibility
