--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -7,8 +7,6 @@ nav,
   align-items: center;
   padding: 1rem 2rem;
   background: $primary-bg-color;
-  // position: sticky;
-  // top: 0px;
 }
 
 .desktop-nav .nav-links {
@@ -18,7 +16,7 @@ nav,
 }
 
 .desktop-nav .nav-links a {
-  color: #000;
+  color: $primary-text-color;
   text-decoration: none;
 }
 
@@ -49,7 +47,7 @@ nav,
 .hamburger-icon span {
   width: 100%;
   height: 2px;
-  background-color: black;
+  background-color: $primary-text-color;
   transition: all 0.3s ease-in-out;
 }
 
@@ -59,7 +57,6 @@ nav,
   right: 0;
   background-color: $primary-bg-color;
   width: fit-content;
-
   max-height: 0;
   overflow: hidden;
   transition: all 0.3s ease-in-out;
@@ -70,7 +67,7 @@ nav,
   padding: 10px;
   text-align: center;
   font-size: 1.5rem;
-  color: black;
+  color: $primary-text-color;
   text-decoration: none;
   gap: 1rem;
   display: flex;
