--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   gap: 2rem;
   align-items: flex-start; // Adjusted to align items at the top
+  background: $primary-bg-color;
 }
 
 .skill-category {
@@ -24,7 +25,7 @@
 
   .sub-title {
     font-size: 1.2rem;
-    color: #555;
+    color: $primary-text-color;
     margin-bottom: 1rem;
     font-weight: 500;
   }
@@ -56,7 +57,7 @@
 
     i {
       font-size: 1.3rem;
-      color: #333;
+      color: $primary-text-color;
       transition: transform 0.2s;
 
       &:hover {
@@ -66,7 +67,7 @@
 
     p {
       font-size: 1rem;
-      color: #555;
+      color: $primary-text-color;
       margin: 0;
     }
   }
