--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -1,18 +1,18 @@
-$primary-bg-color: #fff;
-$intro-txt-color: #777;
-$title-txt-color: #333;
 $intro-font-size: 1.5rem;
 $title-font-size: 2.5rem;
 $intro-m-b: 2rem;
 $title-m-b: 3rem;
 $title-font-weight: 600;
-$border: 1px solid #ddd;
-$box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 $transition: transform 0.3s, box-shadow 0.3s;
 $transition-hover: translateY(-5px);
 
-$primary-bg-color: #f8f9fa;
-$secondary-text-color: #6c757d;
+// LIGHT THEME
+$primary-bg-color: #fff;
+$intro-txt-color: #777;
+$title-txt-color: #333;
+$border: 1px solid #ddd;
+$box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+$secondary-text-color: #777;
 $primary-text-color: #343a40;
 $border-color: #dee2e6;
 $box-bg-color: #ffffff;
@@ -23,12 +23,9 @@ $btn-text-color: #ffffff;
 $btn-hover-bg: #0056b3;
 $btn-hover-text: #ffffff;
 
-$dark-mode-primary-bg-color: #777;
-$dark-mode-intro-txt-color: #fff;
-$dark-mode-title-txt-color: #333;
-$dark-mode-intro-font-size: 1.5rem;
-$dark-mode-title-font-size: 3rem;
-$dark-mode-intro-m-t: 1rem;
-$dark-mode-title-m-t: 2rem;
-$dark-mode-title-font-weight: 600;
-$dark-mode-border: 1px solid #ddd;
+//DARK THEME
+// $primary-bg-color: #2e2e2e;
+// $intro-txt-color: #fff;
+// $title-txt-color: #fff;
+// $border: 1px solid #ddd;
+// $primary-text-color: #fff;
