--- a/src/app/overview-dialog/overview-dialog.component.html
+++ b/src/app/overview-dialog/overview-dialog.component.html
@@ -29,7 +29,7 @@
           class="btn btn-secondary"
           (click)="openLink(modalData.liveDemoLink)"
         >
-          <i class="fas fa-desktop"></i> Demo
+          <i class="fas fa-desktop"></i> View
         </button>
         }
       </div>
