loader and experience issue fixed

--- a/src/app/features/experience/experience.component.html
+++ b/src/app/features/experience/experience.component.html
@@ -12,7 +12,7 @@
             <strong>Duration:</strong> {{ exp.dateOfEmployment }}
           </p>
           <p class="card-text">
-            <strong>Experience:</strong> {{ exp.yearsOfExperience }}
+            <strong>Experience:</strong> {{ calculateExperience(exp.joiningDate) }}
           </p>
           <p class="card-text">
             <strong>Location:</strong> {{ exp.location }}
