--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
-<app-nav-bar></app-nav-bar>
-
 <ng-template [ngIf]="userInfo" [ngIfElse]="loader">
+  <app-nav-bar></app-nav-bar>
+
   <app-intro
     [intro]="userInfo.intro"
     [socialUrls]="userInfo.socialUrls"
@@ -49,7 +49,7 @@
     [type]="loaderType"
   >
     <p style="font-size: 18px; color: #ffffff; margin-top: 20px">
-      Loading, please wait...
+      Please wait...
     </p>
   </ngx-spinner>
 </ng-template>
