--- a/src/app/features/intro/intro.component.html
+++ b/src/app/features/intro/intro.component.html
@@ -9,14 +9,7 @@
       <i class="fa-solid fa-location-arrow"></i>
       <span> {{ intro.currentLocation }}</span>
     </div>
-    <!-- <div class="btn-container m-3">
-      <button
-        class="btn btn-secondary"
-        (click)="openDemo('./assets/resume-example.pdf')"
-      >
-        Download Resume
-      </button>
-    </div> -->
+   
     <div class="socials-container">
       <i
         class="icon fa-solid fa-phone"
@@ -35,5 +28,15 @@
         (click)="redirect(socialUrls.linkedin)"
       ></i>
     </div>
+
+     <div class="btn-container m-3">
+      <button
+        class="btn btn-secondary"
+        (click)="openDemo('./assets/pdf/Shakeer_Shaik_Frontend_Developer_Resume.pdf')"
+      >
+        Resume <span> <i class="fa-solid fa-eye"></i></span>
+      </button>
+    </div>
+    
   </div>
 </div>
