--- a/src/app/features/intro/intro.component.scss
+++ b/src/app/features/intro/intro.component.scss
@@ -55,9 +55,13 @@
       padding: 10px;
       font-weight: 600;
       border-radius: 2rem;
-      max-width: 200px; // Limit button width
-      width: 100%; // Full width for smaller screens
+      max-width: 200px; 
+      width: 100%; 
+      font-size: 0.8rem;
     }
+    span {
+      margin-left: 5px;
+    };
   }
 
   .socials-container {
