--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,6 +22,7 @@ $btn-bg-color: #007bff;
 $btn-text-color: #ffffff;
 $btn-hover-bg: #0056b3;
 $btn-hover-text: #ffffff;
+$main-content-bg-color: #f8f9fa;
 
 //DARK THEME
 // $primary-bg-color: #2e2e2e;
