--- a/src/app/features/intro/intro.component.scss
+++ b/src/app/features/intro/intro.component.scss
@@ -7,7 +7,7 @@
   gap: 5rem;
   height: 80vh;
   padding: 2rem;
-  background: $primary-bg-color;
+  background: $main-content-bg-color;
 
   .pic-container {
     display: flex;
@@ -16,8 +16,8 @@
     img {
       height: 325px;
       width: 325px;
-      border-radius: 50%; // Use 50% for a perfect circle
-      object-fit: cover; // Ensure the image covers the container
+      border-radius: 50%;
+      object-fit: cover;
     }
   }
 
@@ -25,7 +25,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    align-items: center; // Center align the text
+    align-items: center;
 
     .username {
       font-size: 2.2rem;
@@ -55,13 +55,13 @@
       padding: 10px;
       font-weight: 600;
       border-radius: 2rem;
-      max-width: 200px; 
-      width: 100%; 
+      max-width: 200px;
+      width: 100%;
       font-size: 0.8rem;
     }
     span {
       margin-left: 5px;
-    };
+    }
   }
 
   .socials-container {
@@ -74,7 +74,7 @@
       color: $primary-text-color;
       cursor: pointer;
       height: 2rem;
-      font-size: 1.4rem; // Increased icon size for better visibility
+      font-size: 1.4rem;
       transition: transform 0.2s;
 
       &:hover {
@@ -131,7 +131,7 @@
   }
   @media (max-width: 768px) {
     flex-direction: column;
-    height: auto; // Allow the section to adjust based on content
+    height: auto;
     align-items: center;
   }
 }
