--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -6,8 +6,9 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 2rem; // Increased gap for better spacing
-  background: $primary-bg-color;
+  background: $main-content-bg-color;
   .container-box {
+    background: $primary-bg-color;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -66,7 +67,7 @@
     }
 
     .container-title {
-      font-size: 1rem; 
+      font-size: 1rem;
       color: $title-txt-color;
     }
   }
